--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -12256,7 +12256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -12298,7 +12298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -12440,7 +12440,7 @@
        "[32359 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12451,7 +12451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -12593,7 +12593,7 @@
        "[20279 rows x 5 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12604,7 +12604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12613,32 +12613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "item_id            255329230093.0\n",
-       "quantity_delta              -20.0\n",
-       "quantity                      0.0\n",
-       "custom_label      CAL138L+CAL138R\n",
-       "store                         MFD\n",
-       "Name: 54036, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ebay_df[ebay_df['quantity_delta'] != 0].iloc[0]"
+    "ebay_df[ebay_df['quantity_delta'] != 0][\"custom_label\"].drop_duplicates().to_csv(\"test.csv\",index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -12671,227 +12655,195 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5316285</th>\n",
-       "      <td>2.558118e+11</td>\n",
+       "      <th>54059</th>\n",
+       "      <td>2.557879e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>MFD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316286</th>\n",
-       "      <td>2.659736e+11</td>\n",
+       "      <th>54060</th>\n",
+       "      <td>2.659529e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>MFD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316287</th>\n",
-       "      <td>2.659756e+11</td>\n",
+       "      <th>54061</th>\n",
+       "      <td>2.557929e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>MFD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316288</th>\n",
-       "      <td>2.659756e+11</td>\n",
+       "      <th>54062</th>\n",
+       "      <td>1.754587e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>MFD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316289</th>\n",
-       "      <td>3.142179e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>DPW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316290</th>\n",
-       "      <td>1.754780e+11</td>\n",
+       "      <th>54063</th>\n",
+       "      <td>3.142018e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>DPW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316291</th>\n",
-       "      <td>1.754792e+11</td>\n",
+       "      <th>54064</th>\n",
+       "      <td>1.754587e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>DPW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316292</th>\n",
-       "      <td>1.754781e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>PV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316293</th>\n",
-       "      <td>1.856472e+11</td>\n",
+       "      <th>54065</th>\n",
+       "      <td>1.856280e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>PV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316294</th>\n",
-       "      <td>1.856472e+11</td>\n",
+       "      <th>54066</th>\n",
+       "      <td>2.041288e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>PV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316295</th>\n",
-       "      <td>2.041420e+11</td>\n",
+       "      <th>54067</th>\n",
+       "      <td>1.155747e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>PV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316296</th>\n",
-       "      <td>1.447956e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>CPO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316297</th>\n",
-       "      <td>1.255974e+11</td>\n",
+       "      <th>54068</th>\n",
+       "      <td>1.447807e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>CPO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316298</th>\n",
-       "      <td>1.155944e+11</td>\n",
+       "      <th>54069</th>\n",
+       "      <td>1.447807e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>CPO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316299</th>\n",
-       "      <td>1.155944e+11</td>\n",
+       "      <th>54070</th>\n",
+       "      <td>1.155782e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>CPO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316300</th>\n",
-       "      <td>1.447982e+11</td>\n",
+       "      <th>54071</th>\n",
+       "      <td>2.261593e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>CPO</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
+       "      <td>AMS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316301</th>\n",
-       "      <td>2.252365e+11</td>\n",
+       "      <th>54072</th>\n",
+       "      <td>2.261593e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
+       "      <td>AMS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54073</th>\n",
+       "      <td>3.354069e+11</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
+       "      <td>AMS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54074</th>\n",
+       "      <td>2.252167e+11</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>SJR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316302</th>\n",
-       "      <td>2.252391e+11</td>\n",
+       "      <th>54075</th>\n",
+       "      <td>2.347464e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>SJR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316303</th>\n",
-       "      <td>2.252391e+11</td>\n",
+       "      <th>54076</th>\n",
+       "      <td>3.253921e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>SJR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316304</th>\n",
-       "      <td>2.347671e+11</td>\n",
+       "      <th>54077</th>\n",
+       "      <td>1.657375e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>SJR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316305</th>\n",
-       "      <td>1.552423e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>RTG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316306</th>\n",
-       "      <td>1.552409e+11</td>\n",
+       "      <th>54078</th>\n",
+       "      <td>1.754587e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>RTG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316307</th>\n",
-       "      <td>1.552377e+11</td>\n",
+       "      <th>54079</th>\n",
+       "      <td>1.552189e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>RTG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316308</th>\n",
-       "      <td>1.754792e+11</td>\n",
+       "      <th>54080</th>\n",
+       "      <td>1.657375e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>RTG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316309</th>\n",
-       "      <td>1.552423e+11</td>\n",
+       "      <th>54081</th>\n",
+       "      <td>1.552177e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>RTG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316310</th>\n",
-       "      <td>2.041430e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5316311</th>\n",
-       "      <td>2.041421e+11</td>\n",
+       "      <th>54082</th>\n",
+       "      <td>1.552221e+11</td>\n",
+       "      <td>-20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
-       "      <td>AST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5316312</th>\n",
-       "      <td>2.041440e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>UKF-GAT-09-1375</td>\n",
+       "      <td>CAL138L/R+CBP01610</td>\n",
        "      <td>AST</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -12899,44 +12851,40 @@
        "</div>"
       ],
       "text/plain": [
-       "              item_id  quantity_delta  quantity     custom_label store\n",
-       "5316285  2.558118e+11             0.0       1.0  UKF-GAT-09-1375   MFD\n",
-       "5316286  2.659736e+11             0.0       1.0  UKF-GAT-09-1375   MFD\n",
-       "5316287  2.659756e+11             0.0       1.0  UKF-GAT-09-1375   MFD\n",
-       "5316288  2.659756e+11             0.0       1.0  UKF-GAT-09-1375   MFD\n",
-       "5316289  3.142179e+11             0.0       1.0  UKF-GAT-09-1375   DPW\n",
-       "5316290  1.754780e+11             0.0       1.0  UKF-GAT-09-1375   DPW\n",
-       "5316291  1.754792e+11             0.0       1.0  UKF-GAT-09-1375   DPW\n",
-       "5316292  1.754781e+11             0.0       1.0  UKF-GAT-09-1375    PV\n",
-       "5316293  1.856472e+11             0.0       1.0  UKF-GAT-09-1375    PV\n",
-       "5316294  1.856472e+11             0.0       1.0  UKF-GAT-09-1375    PV\n",
-       "5316295  2.041420e+11             0.0       1.0  UKF-GAT-09-1375    PV\n",
-       "5316296  1.447956e+11             0.0       1.0  UKF-GAT-09-1375   CPO\n",
-       "5316297  1.255974e+11             0.0       1.0  UKF-GAT-09-1375   CPO\n",
-       "5316298  1.155944e+11             0.0       1.0  UKF-GAT-09-1375   CPO\n",
-       "5316299  1.155944e+11             0.0       1.0  UKF-GAT-09-1375   CPO\n",
-       "5316300  1.447982e+11             0.0       1.0  UKF-GAT-09-1375   CPO\n",
-       "5316301  2.252365e+11             0.0       1.0  UKF-GAT-09-1375   SJR\n",
-       "5316302  2.252391e+11             0.0       1.0  UKF-GAT-09-1375   SJR\n",
-       "5316303  2.252391e+11             0.0       1.0  UKF-GAT-09-1375   SJR\n",
-       "5316304  2.347671e+11             0.0       1.0  UKF-GAT-09-1375   SJR\n",
-       "5316305  1.552423e+11             0.0       1.0  UKF-GAT-09-1375   RTG\n",
-       "5316306  1.552409e+11             0.0       1.0  UKF-GAT-09-1375   RTG\n",
-       "5316307  1.552377e+11             0.0       1.0  UKF-GAT-09-1375   RTG\n",
-       "5316308  1.754792e+11             0.0       1.0  UKF-GAT-09-1375   RTG\n",
-       "5316309  1.552423e+11             0.0       1.0  UKF-GAT-09-1375   RTG\n",
-       "5316310  2.041430e+11             0.0       1.0  UKF-GAT-09-1375   AST\n",
-       "5316311  2.041421e+11             0.0       1.0  UKF-GAT-09-1375   AST\n",
-       "5316312  2.041440e+11             0.0       1.0  UKF-GAT-09-1375   AST"
+       "            item_id  quantity_delta  quantity        custom_label store\n",
+       "54059  2.557879e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
+       "54060  2.659529e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
+       "54061  2.557929e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
+       "54062  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610   DPW\n",
+       "54063  3.142018e+11           -20.0       0.0  CAL138L/R+CBP01610   DPW\n",
+       "54064  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
+       "54065  1.856280e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
+       "54066  2.041288e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
+       "54067  1.155747e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
+       "54068  1.447807e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
+       "54069  1.447807e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
+       "54070  1.155782e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
+       "54071  2.261593e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
+       "54072  2.261593e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
+       "54073  3.354069e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
+       "54074  2.252167e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
+       "54075  2.347464e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
+       "54076  3.253921e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
+       "54077  1.657375e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
+       "54078  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
+       "54079  1.552189e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
+       "54080  1.657375e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
+       "54081  1.552177e+11           -20.0       0.0  CAL138L/R+CBP01610   AST\n",
+       "54082  1.552221e+11           -20.0       0.0  CAL138L/R+CBP01610   AST"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ebay_df[ebay_df['custom_label'] == 'UKF-GAT-09-1375']"
+    "ebay_df[ebay_df['custom_label'] == 'CAL138L/R+CBP01610']"
    ]
   },
   {
