--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12604,16 +12604,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "ebay_df = pd.read_csv(\"data/tables/ebay.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12622,269 +12623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>quantity_delta</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>custom_label</th>\n",
-       "      <th>store</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>54059</th>\n",
-       "      <td>2.557879e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>MFD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54060</th>\n",
-       "      <td>2.659529e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>MFD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54061</th>\n",
-       "      <td>2.557929e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>MFD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54062</th>\n",
-       "      <td>1.754587e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>DPW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54063</th>\n",
-       "      <td>3.142018e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>DPW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54064</th>\n",
-       "      <td>1.754587e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>PV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54065</th>\n",
-       "      <td>1.856280e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>PV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54066</th>\n",
-       "      <td>2.041288e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>PV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54067</th>\n",
-       "      <td>1.155747e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>CPO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54068</th>\n",
-       "      <td>1.447807e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>CPO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54069</th>\n",
-       "      <td>1.447807e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>CPO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54070</th>\n",
-       "      <td>1.155782e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>CPO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54071</th>\n",
-       "      <td>2.261593e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>AMS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54072</th>\n",
-       "      <td>2.261593e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>AMS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54073</th>\n",
-       "      <td>3.354069e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>AMS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54074</th>\n",
-       "      <td>2.252167e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>SJR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54075</th>\n",
-       "      <td>2.347464e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>SJR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54076</th>\n",
-       "      <td>3.253921e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>SJR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54077</th>\n",
-       "      <td>1.657375e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>RTG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54078</th>\n",
-       "      <td>1.754587e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>RTG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54079</th>\n",
-       "      <td>1.552189e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>RTG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54080</th>\n",
-       "      <td>1.657375e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>RTG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54081</th>\n",
-       "      <td>1.552177e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>AST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54082</th>\n",
-       "      <td>1.552221e+11</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>CAL138L/R+CBP01610</td>\n",
-       "      <td>AST</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            item_id  quantity_delta  quantity        custom_label store\n",
-       "54059  2.557879e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
-       "54060  2.659529e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
-       "54061  2.557929e+11           -20.0       0.0  CAL138L/R+CBP01610   MFD\n",
-       "54062  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610   DPW\n",
-       "54063  3.142018e+11           -20.0       0.0  CAL138L/R+CBP01610   DPW\n",
-       "54064  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
-       "54065  1.856280e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
-       "54066  2.041288e+11           -20.0       0.0  CAL138L/R+CBP01610    PV\n",
-       "54067  1.155747e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
-       "54068  1.447807e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
-       "54069  1.447807e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
-       "54070  1.155782e+11           -20.0       0.0  CAL138L/R+CBP01610   CPO\n",
-       "54071  2.261593e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
-       "54072  2.261593e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
-       "54073  3.354069e+11           -20.0       0.0  CAL138L/R+CBP01610   AMS\n",
-       "54074  2.252167e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
-       "54075  2.347464e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
-       "54076  3.253921e+11           -20.0       0.0  CAL138L/R+CBP01610   SJR\n",
-       "54077  1.657375e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
-       "54078  1.754587e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
-       "54079  1.552189e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
-       "54080  1.657375e+11           -20.0       0.0  CAL138L/R+CBP01610   RTG\n",
-       "54081  1.552177e+11           -20.0       0.0  CAL138L/R+CBP01610   AST\n",
-       "54082  1.552221e+11           -20.0       0.0  CAL138L/R+CBP01610   AST"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ebay_df[ebay_df['custom_label'] == 'CAL138L/R+CBP01610']"
+    "ebay_df[(ebay_df['quantity_delta'] != 0) & (ebay_df['supplier_store'] == 'RTG')].drop_duplicates(subset=['custom_label']).to_csv(\"test.csv\",index=False)\n"
    ]
   },
   {
