Add header row number

--- a/app_checker.ipynb
+++ b/app_checker.ipynb
@@ -745,12 +745,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "inspect_df = pd.merge(app_upload, rtg_upload, left_on=\"item_id\", right_on=\"ItemID\", how=\"left\")\n",
-    "inspect_df = inspect_df[inspect_df[\"ebay_store\"] == \"RTG\"]\n",
+    "inspect_df = inspect_df[inspect_df[\"ebay_store\"] == \"RTG\"].dropna()\n",
+    "inspect_df[\"difference\"] = inspect_df[\"quantity_delta\"] - inspect_df[\"Quantity\"]\n",
     "inspect_df.to_csv(\"data/app_checker/inspect_df.csv\", index=False)"
    ]
   },
