--- a/app_checker.ipynb
+++ b/app_checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Data': [{'VarCharValue': 'part_number'}, {'VarCharValue': 'quantity'}, {'VarCharValue': 'updated_date'}, {'VarCharValue': 'supplier'}, {'VarCharValue': 'custom_label'}]}, {'Data': [{'VarCharValue': 'BU1207'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1207'}]}, {'Data': [{'VarCharValue': 'BU1208'}, {'VarCharValue': '0'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1208'}]}, {'Data': [{'VarCharValue': 'BU1209'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1209'}]}, {'Data': [{'VarCharValue': 'BU1210'}, {'VarCharValue': '0'}, {'VarCharValue': '2024-10-08'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1210'}]}]\n"
+      "[{'Data': [{'VarCharValue': 'part_number'}, {'VarCharValue': 'quantity'}, {'VarCharValue': 'updated_date'}, {'VarCharValue': 'supplier'}, {'VarCharValue': 'custom_label'}]}, {'Data': [{'VarCharValue': 'BU1207'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-07'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1207'}]}, {'Data': [{'VarCharValue': 'BU1208'}, {'VarCharValue': '0'}, {'VarCharValue': '2024-10-07'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1208'}]}, {'Data': [{'VarCharValue': 'BU1209'}, {'VarCharValue': '10'}, {'VarCharValue': '2024-10-07'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1209'}]}, {'Data': [{'VarCharValue': 'BU1210'}, {'VarCharValue': '0'}, {'VarCharValue': '2024-10-07'}, {'VarCharValue': 'BGA'}, {'VarCharValue': 'UKD-BGA-BU1210'}]}]\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "      <th>0</th>\n",
        "      <td>BU1207</td>\n",
        "      <td>10</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>BGA</td>\n",
        "      <td>UKD-BGA-BU1207</td>\n",
        "    </tr>\n",
@@ -425,7 +425,7 @@
        "      <th>1</th>\n",
        "      <td>BU1208</td>\n",
        "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>BGA</td>\n",
        "      <td>UKD-BGA-BU1208</td>\n",
        "    </tr>\n",
@@ -433,7 +433,7 @@
        "      <th>2</th>\n",
        "      <td>BU1209</td>\n",
        "      <td>10</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>BGA</td>\n",
        "      <td>UKD-BGA-BU1209</td>\n",
        "    </tr>\n",
@@ -441,7 +441,7 @@
        "      <th>3</th>\n",
        "      <td>BU1210</td>\n",
        "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>BGA</td>\n",
        "      <td>UKD-BGA-BU1210</td>\n",
        "    </tr>\n",
@@ -449,7 +449,7 @@
        "      <th>4</th>\n",
        "      <td>BU1211</td>\n",
        "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>BGA</td>\n",
        "      <td>UKD-BGA-BU1211</td>\n",
        "    </tr>\n",
@@ -463,43 +463,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253204</th>\n",
-       "      <td>NWP1535</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>775114</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1535</td>\n",
+       "      <td>UKF-NRF-775114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253205</th>\n",
-       "      <td>NWP1537</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>775115</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1537</td>\n",
+       "      <td>UKF-NRF-775115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253206</th>\n",
-       "      <td>NWP1538</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>31754B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1538</td>\n",
+       "      <td>UKF-NRF-31754B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253207</th>\n",
-       "      <td>NWP1539</td>\n",
+       "      <td>34238</td>\n",
        "      <td>0</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1539</td>\n",
+       "      <td>UKF-NRF-34238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253208</th>\n",
-       "      <td>NWP1540</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2024-10-08</td>\n",
+       "      <td>350362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-10-07</td>\n",
        "      <td>FPS</td>\n",
-       "      <td>UKF-NAP-NWP1540</td>\n",
+       "      <td>UKF-NRF-350362</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,23 +507,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       part_number  quantity updated_date supplier     custom_label\n",
-       "0           BU1207        10   2024-10-08      BGA   UKD-BGA-BU1207\n",
-       "1           BU1208         0   2024-10-08      BGA   UKD-BGA-BU1208\n",
-       "2           BU1209        10   2024-10-08      BGA   UKD-BGA-BU1209\n",
-       "3           BU1210         0   2024-10-08      BGA   UKD-BGA-BU1210\n",
-       "4           BU1211         0   2024-10-08      BGA   UKD-BGA-BU1211\n",
-       "...            ...       ...          ...      ...              ...\n",
-       "253204     NWP1535         2   2024-10-08      FPS  UKF-NAP-NWP1535\n",
-       "253205     NWP1537         1   2024-10-08      FPS  UKF-NAP-NWP1537\n",
-       "253206     NWP1538         7   2024-10-08      FPS  UKF-NAP-NWP1538\n",
-       "253207     NWP1539         0   2024-10-08      FPS  UKF-NAP-NWP1539\n",
-       "253208     NWP1540        10   2024-10-08      FPS  UKF-NAP-NWP1540\n",
+       "       part_number  quantity updated_date supplier    custom_label\n",
+       "0           BU1207        10   2024-10-07      BGA  UKD-BGA-BU1207\n",
+       "1           BU1208         0   2024-10-07      BGA  UKD-BGA-BU1208\n",
+       "2           BU1209        10   2024-10-07      BGA  UKD-BGA-BU1209\n",
+       "3           BU1210         0   2024-10-07      BGA  UKD-BGA-BU1210\n",
+       "4           BU1211         0   2024-10-07      BGA  UKD-BGA-BU1211\n",
+       "...            ...       ...          ...      ...             ...\n",
+       "253204      775114         4   2024-10-07      FPS  UKF-NRF-775114\n",
+       "253205      775115         4   2024-10-07      FPS  UKF-NRF-775115\n",
+       "253206      31754B         2   2024-10-07      FPS  UKF-NRF-31754B\n",
+       "253207       34238         0   2024-10-07      FPS   UKF-NRF-34238\n",
+       "253208      350362         2   2024-10-07      FPS  UKF-NRF-350362\n",
        "\n",
        "[253209 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "[259668 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -720,23 +720,189 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>467</th>\n",
+       "      <td>BU6305</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>UKD-BGA-BU6305</td>\n",
+       "      <td>BU6305</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>CH0102B</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>UKD-BGA-CH0102B</td>\n",
+       "      <td>CH0102B</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1113</th>\n",
+       "      <td>CH1400C</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>UKD-BGA-CH1400C</td>\n",
+       "      <td>CH1400C</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1116</th>\n",
+       "      <td>CH1402A</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>UKD-BGA-CH1402A</td>\n",
+       "      <td>CH1402A</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117</th>\n",
+       "      <td>CH1402B</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>UKD-BGA-CH1402B</td>\n",
+       "      <td>CH1402B</td>\n",
+       "      <td>BGA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252617</th>\n",
+       "      <td>59217</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>UKF-NRF-59217</td>\n",
+       "      <td>59217</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252623</th>\n",
+       "      <td>59223</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>UKF-NRF-59223</td>\n",
+       "      <td>59223</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252654</th>\n",
+       "      <td>59264</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>UKF-NRF-59264</td>\n",
+       "      <td>59264</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252704</th>\n",
+       "      <td>59354</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>UKF-NRF-59354</td>\n",
+       "      <td>59354</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253202</th>\n",
+       "      <td>775110</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>UKF-NRF-775110</td>\n",
+       "      <td>775110</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5074 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [part_number_x, quantity_x, updated_date, supplier_x, custom_label, part_number_y, supplier_y, quantity_y, difference]\n",
-       "Index: []"
+       "       part_number_x  quantity_x updated_date supplier_x     custom_label  \\\n",
+       "467           BU6305          10   2024-10-07        BGA   UKD-BGA-BU6305   \n",
+       "918          CH0102B           4   2024-10-07        BGA  UKD-BGA-CH0102B   \n",
+       "1113         CH1400C          10   2024-10-07        BGA  UKD-BGA-CH1400C   \n",
+       "1116         CH1402A           6   2024-10-07        BGA  UKD-BGA-CH1402A   \n",
+       "1117         CH1402B          10   2024-10-07        BGA  UKD-BGA-CH1402B   \n",
+       "...              ...         ...          ...        ...              ...   \n",
+       "252617         59217           4   2024-10-07        FPS    UKF-NRF-59217   \n",
+       "252623         59223           3   2024-10-07        FPS    UKF-NRF-59223   \n",
+       "252654         59264           2   2024-10-07        FPS    UKF-NRF-59264   \n",
+       "252704         59354           2   2024-10-07        FPS    UKF-NRF-59354   \n",
+       "253202        775110           4   2024-10-07        FPS   UKF-NRF-775110   \n",
+       "\n",
+       "       part_number_y supplier_y  quantity_y  difference  \n",
+       "467           BU6305        BGA         0.0       -10.0  \n",
+       "918          CH0102B        BGA         3.0        -1.0  \n",
+       "1113         CH1400C        BGA         1.0        -9.0  \n",
+       "1116         CH1402A        BGA         0.0        -6.0  \n",
+       "1117         CH1402B        BGA         0.0       -10.0  \n",
+       "...              ...        ...         ...         ...  \n",
+       "252617         59217        FPS         3.0        -1.0  \n",
+       "252623         59223        FPS         2.0        -1.0  \n",
+       "252654         59264        FPS         1.0        -1.0  \n",
+       "252704         59354        FPS         1.0        -1.0  \n",
+       "253202        775110        FPS         3.0        -1.0  \n",
+       "\n",
+       "[5074 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "inspect_df[inspect_df[\"difference\"] != 0].dropna(subset=[\"difference\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspect_df[inspect_df[\"difference\"] != 0].dropna(subset=[\"difference\"]).to_csv(f\"/Users/chrislittle/Dropbox/#Speedsheet/app_checker/{NEXT_DATE.replace('-', '_')}/inspect.csv\", index=False)"
    ]
   },
   {
